feat: add api get detail book by book id
