# api/v1/models/authors.go
@@ -1,0 +1,7 @@
+package models
+
+type Author struct {
+	AuthorID  int    `json:"author_id"`
+	Name      string `json:"name"`
+	Biography string `json:"biography"`
+}
