# docs/swagger.json
@@ -20,19 +20,51 @@
                 "summary": "เพิ่มข้อมูลหนังสือ",
                 "parameters": [
                     {
-                        "name": "book",
                         "in": "body",
+                        "name": "book",
+                        "description": "ข้อมูลหนังสือที่ต้องการเพิ่ม",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/Book"
+                            "$ref": "#/definitions/addBookReq"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful add a new book",
-                        "schema": {
-                            "$ref": "#/definitions/globalResponse"
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/definitions/globalResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/detail_book/{book_id}": {
+            "get": {
+                "description": "ดึงรายละเอียดข้อมูลหนังสือ",
+                "summary": "ดึงรายละเอียดข้อมูลหนังสือตาม book_id",
+                "parameters": [
+                    {
+                        "name": "book_id",
+                        "in": "path",
+                        "description": "ID ของหนังสือ",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ข้อมูลหนังสือ",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/definitions/bookDetailResponse"
+                                }
+                            }
                         }
                     }
                 }
@@ -40,7 +72,88 @@
         }
     },
     "definitions": {
-        "Book": {
+        "globalResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "object"
+                }
+            }
+        },
+        "bookDetailResponse": {
+            "type": "object",
+            "properties": {
+                "book_id": {
+                    "type": "integer",
+                    "example": 2
+                },
+                "title": {
+                    "type": "string",
+                    "example": "หนังสือ A"
+                },
+                "author_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "category_id": {
+                    "type": "integer",
+                    "example": 2
+                },
+                "publish_year": {
+                    "type": "integer",
+                    "example": 2020
+                },
+                "isbn": {
+                    "type": "string",
+                    "example": "9783-16-148410-0"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "คำอธิบายของหนังสือ A"
+                },
+                "available_qty": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "Author": {
+                    "type": "object",
+                    "properties": {
+                        "author_id": {
+                            "type": "integer",
+                            "example": 1
+                        },
+                        "name": {
+                            "type": "string",
+                            "example": "จุฑามาศ พันธ์เจริญ"
+                        },
+                        "biography": {
+                            "type": "string",
+                            "example": "ผู้แต่งนิยายและบทความด้านสังคมศาสตร์ มีผลงานมากมายในด้านการศึกษาประวัติศาสตร์และวัฒนธรรมไทย"
+                        }
+                    }
+                },
+                "Category": {
+                    "type": "object",
+                    "properties": {
+                        "category_id": {
+                            "type": "integer",
+                            "example": 2
+                        },
+                        "category_name": {
+                            "type": "string",
+                            "example": "วิทยาศาสตร์"
+                        }
+                    }
+                }
+            }
+        },
+        "addBookReq": {
             "type": "object",
             "properties": {
                 "title": {
@@ -74,20 +187,6 @@
                 "description",
                 "available_qty"
             ]
-        },
-        "globalResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "value": {
-                    "type": "object"
-                }
-            }
         }
     }
 }
